--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\ImportExport\ImportExport\ImportExport\ImportExport.csproj" />
+    </ItemGroup>
+
 </Project>
